# Recurrence-Quantification-Analysis

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  MANIFEST.in  README.md  __int__.py  autoRQA.py  diagonalRP.py  multivariateRQA.py  pyproject.toml  setup.py
.github/workflows/: build-wheels.yml  tests.yml
docs/plans/: 2026-03-28-release-prep-fixes.md
rqa_analysis/: __init__.py  autoRQA.py  crossRQA.py  multivariateRQA.py
rqa_analysis/utils/: __init__.py  filter_utils.py  metrics_utils.py  norm_utils.py  output_io_utils.py  plot_utils.py  rqa_utils.cpp
tests/: conftest.py  test_auto_rqa.py  test_cpp_extension.py  test_cross_rqa.py  test_drp.py  test_filter_utils.py  test_integration.py  test_metrics_utils.py  test_multivariate_rqa.py  test_norm_utils.py  test_output_io_utils.py  test_plot_utils.py
utils/: __int__.py
